--- a/基础.md
+++ b/基础.md
@@ -1,2 +1,6 @@
 # Softmax
 参考博文：https://blog.csdn.net/bitcarmanlee/article/details/82320853
+
+# 矩阵求导
+矩阵求导转化迹的形式： https://blog.csdn.net/zongza/article/details/82932325
+https://blog.csdn.net/daaikuaichuan/article/details/80620518
