--- a/基础.md
+++ b/基础.md
@@ -5,3 +5,5 @@
 矩阵求导转化迹的形式： https://blog.csdn.net/zongza/article/details/82932325
 https://blog.csdn.net/daaikuaichuan/article/details/80620518  
 布局https://blog.csdn.net/shouhuxianjian/article/details/46669365  
+分子布局分母布局比较通俗的博文http://www.pianshen.com/article/5516168061/  
+复合矩阵求导后的左乘右乘：维度相容原理（求导结果与自变量同型）http://www.pianshen.com/article/3246215315/
